# rust-workspace-template

./: .editorconfig  .gitignore  CHANGELOG.txt  Cargo.toml  LICENSE  Makefile  README.md  make
.cargo/: config.toml
app/: Cargo.toml  build.rs  resource.rc  uac.manifest
app/src/: main.rs
app/src/tests/: mod.rs
app/src/utils/: check.rs
dll/: Cargo.toml
dll/src/: lib.rs
dll/src/utils/: fs.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/tests/: mod.rs
lib/src/utils/: macros.rs
