# --- App config ---
# Author: William C. Canin <https://williamcanin.github.io>

[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

# === Windows dependencies only ====
[target.'cfg(windows)'.dependencies]
dll = {path = "../dll"}

[dependencies]
lib = {path = "../lib"}

